[gd_scene load_steps=16 format=2]

[ext_resource path="res://trash/weapons/weapon_area/broadsword/broadsword.tres" type="Texture" id=1]
[ext_resource path="res://trash/warrior/warrior.gd" type="Script" id=2]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4.png" type="Texture" id=3]
[ext_resource path="res://item_manager.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 176, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 192, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 208, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 224, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 240, 64, 16, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "walk",
"speed": 16.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=12]
radius = 128.0

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ItemPivot/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemPivot/Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[sub_resource type="Animation" id=15]
resource_name = "stab"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ItemPivot/Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12, 0 ), Vector2( 24, 0 ), Vector2( 12, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemPivot/Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 89.9999 ]
}

[sub_resource type="Animation" id=13]
resource_name = "swing"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ItemPivot/Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12, 0 ), Vector2( 16, -16 ), Vector2( 24, 0 ), Vector2( 16, 16 ), Vector2( 12, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemPivot/Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 135.0, 0.0 ]
}

[node name="Warrior" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="Particles2D" type="CPUParticles2D" parent="."]
local_coords = false
direction = Vector2( 0, -1 )
spread = 30.0
initial_velocity = 64.0
angular_velocity = 720.0
angular_velocity_random = 1.0
scale_amount = 3.53
color = Color( 0.129412, 0.109804, 0.0980392, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
frames = SubResource( 5 )
animation = "walk"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="ItemManager" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="ItemPivot" type="Node2D" parent="ItemManager"]

[node name="Sprite" type="Sprite" parent="ItemManager/ItemPivot"]
position = Vector2( 12, 0 )
rotation = 1.5708
texture = ExtResource( 1 )
region_rect = Rect2( 320, 16, 16, 32 )

[node name="Area" type="Area2D" parent="ItemManager"]
collision_layer = 2
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemManager/Area"]
shape = SubResource( 12 )

[node name="RayCast" type="RayCast2D" parent="ItemManager"]
enabled = true
cast_to = Vector2( 32, 0 )
collision_mask = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="ItemManager"]
playback_process_mode = 0
anims/RESET = SubResource( 14 )
anims/stab = SubResource( 15 )
anims/swing = SubResource( 13 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
